# biologger-fw

./: CMakeLists.txt  Kconfig  README.md  prj.conf
.github/workflows/: docs-main.yml
boards/arm/biologger/: Kconfig.biologger  Kconfig.defconfig  biologger.dts  biologger.yaml  biologger_defconfig  board.cmake  board.yml
boards/arm/biologger/dts/bindings/: gnss-disable.yaml
calibration/ximpedance-cal/: data10.npy  data22.npy  deduce-lut.py  mathex.h  plot.cpp  process.py  process10.py  process22.py  v2i_ximpedance10x_lut.c  v2i_ximpedance22x_lut.c
calibration/ximpedance-cal/10x-1/: n100u  n10u  n15u  n20u  n25u  n30u  n40u  n50u  n60u  n70u  n80u  n90u  sweep.txt
calibration/ximpedance-cal/22x-1/: n10u  n20u  n30u  n40u  n50u  n60u  n70u  n80u  sweep.txt
doc/biologger/: astro.config.mjs  package-lock.json  package.json
doc/biologger/src/content/docs/: index.mdx
doc/biologger/src/content/docs/firmware/: 01-getting-started.md  02-code-structure.md  03-debugging.md
doc/biologger/src/content/docs/usage/: sd.md
drivers/: Kconfig
drivers/licor/li_550/: CMakeLists.txt  Kconfig  li_550.c  li_550.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/tsic_506f/: CMakeLists.txt  Kconfig  tsic_506.h  tsic_506f.c
drivers/sensor/ximpedance_amp/: CMakeLists.txt  Kconfig  mathex.h  v2i_ximpedance10x_lut.c  v2i_ximpedance22x_lut.h  ximpedance_amp.c  ximpedance_amp.h  ximpedance_amp.yaml
drivers/trisonica-mini/: CMakeLists.txt  Kconfig  trisonica_mini.c  trisonica_mini.h
drivers/ximpedance-adc/: v2i_ximpedance10x_lut.h  ximpedance_amp.c  ximpedance_amp.h
drivers/ximpedance_amp/: CMakeLists.txt  v2i_ximpedance10x_lut.c  v2i_ximpedance22x_lut.c  ximpedance_amp.c  ximpedance_amp.h
dts/licor/: li-550.yaml
src/: compiler.h  data_sampler.c  data_sampler.h  experiment.c  experiment.h  main.c  memex.h  observer.c  observer.h  python.h  storage.c  storage.h  str.h  thread_specs.h  trutime.c  trutime.h  usb.c  usb.h
